# hftbacktest-cpp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  quality.yml  release.yml  sanitizers.yml
benchmarks/: replay.cpp
cmake/: hbtConfig.cmake.in
consumer/: CMakeLists.txt  main.cpp
examples/: market_making.cpp
include/hbt/: hbt.hpp  types.hpp
include/hbt/backtest/: backtest.hpp  event_set.hpp  exchange.hpp  local.hpp  order_bus.hpp  processor.hpp  recorder.hpp  state.hpp
include/hbt/data/: npy.hpp  pod.hpp  reader.hpp
include/hbt/depth/: hashmap_depth.hpp  market_depth.hpp  roi_vector_depth.hpp
include/hbt/models/: asset_type.hpp  fee.hpp  latency.hpp  queue.hpp
src/: npy.cpp
tests/: test_backtest.cpp  test_depth.cpp  test_models.cpp  test_npy.cpp  test_order_bus.cpp  test_processors.cpp  test_reader.cpp  test_types.cpp
